GPIO_INPUT/build/log/idf_py_stderr_output_88657
Command: make -j 14 all
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:1:13: error: expected declaration specifiers or '...' before numeric constant
    1 | #define LED 4
      |             ^
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:4:16: note: in expansion of macro 'LED'
    4 | gpio_reset_pin(LED);
      |                ^~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:2:16: error: expected declaration specifiers or '...' before numeric constant
    2 | #define Button 5
      |                ^
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:5:16: note: in expansion of macro 'Button'
    5 | gpio_reset_pin(Button);
      |                ^~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:1:13: error: expected declaration specifiers or '...' before numeric constant
    1 | #define LED 4
      |             ^
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:6:20: note: in expansion of macro 'LED'
    6 | gpio_set_direction(LED, GPIO_MODE_OUTPUT);
      |                    ^~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:6:25: error: unknown type name 'GPIO_MODE_OUTPUT'
    6 | gpio_set_direction(LED, GPIO_MODE_OUTPUT);
      |                         ^~~~~~~~~~~~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:2:16: error: expected declaration specifiers or '...' before numeric constant
    2 | #define Button 5
      |                ^
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:7:20: note: in expansion of macro 'Button'
    7 | gpio_set_pull_mode(Button, GPIO_PULLUP_ONLY);
      |                    ^~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:7:28: error: unknown type name 'GPIO_PULLUP_ONLY'
    7 | gpio_set_pull_mode(Button, GPIO_PULLUP_ONLY);
      |                            ^~~~~~~~~~~~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:2:16: error: expected declaration specifiers or '...' before numeric constant
    2 | #define Button 5
      |                ^
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:8:20: note: in expansion of macro 'Button'
    8 | gpio_set_direction(Button, GPIO_MODE_INPUT);
      |                    ^~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:8:28: error: unknown type name 'GPIO_MODE_INPUT'
    8 | gpio_set_direction(Button, GPIO_MODE_INPUT);
      |                            ^~~~~~~~~~~~~~~
/home/jona/esp-idf/embedded/GPIO_INPUT/main/GPIO_INPUT.c:10:1: error: expected identifier or '(' before 'while'
   10 | while(1)
      | ^~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/GPIO_INPUT.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8889: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
